fix: fix z-index for normal overflay functionality

--- a/src/pages/Homepage.module.css
+++ b/src/pages/Homepage.module.css
@@ -34,7 +34,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 30;
+    z-index: 50;
     opacity: 0;
     visibility: hidden;
     transform: translateY(-10px);
